cmake_minimum_required(VERSION 3.14)
project(clang C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(clang
        1to100.c)
#        bug.c
#        c_to_f.c
#        chosen_one.c
#        course_project.c
#        digits_seq.c
#        double.c
#        empty.h
#        first_last_name.c
#        hello.c
#        if_practice.c
#        longer_than_80.c
#        longestLine.c
#        macros.c
#        many_words.c
#        nauuo_and_votes.c
#        power.c
#        read_char.c
#        remove_blanks.c
#        scanf.c
#        sizeof.c
#        str_length.c
#        strcpy_cat.c
#        string_reverse.c
#        string_task.c
#        strings.c
#        temp_convert_func.c
#        theatre_square.c
#        watermelon.c
#        way_too_long_words.c
